--- a/Partie_1.ipynb
+++ b/Partie_1.ipynb
@@ -334,6 +334,7 @@
     }
    ],
    "source": [
+    "plt.plot([1, 0, 2])\n"
     "plt.rcParams['figure.figsize'] = (10,8)\n",
     "\n",
     "ks = np.linspace(1, len(S), len(S)) # obtenir un tableau 1D allant d’une valeur de départ à une valeur de fin\n",
